--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <div><img src="portfolio-3.jpg" alt=""></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<div><img src="download.png" alt=""></div>
 </body>
 </html>
