--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div><img src="portfolio-3.jpg" alt=""></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-
+<p>This a New line </p>
 <p>This line is here to show how merging works.</p>
 
 <div><img src="download.png" alt=""></div>
