--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>A new line in our file!</p>
 <p>This a New line </p>
 <p>This line is here to show how merging works.</p>
-
+<p>my help</p>
 <div><img src="download.png" alt=""></div>
 </body>
 </html>
