--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p>This a New line </p>
 <p>This line is here to show how merging works.</p>
 <p>my help</p>
+<p>my help</p>
 <div><img src="download.png" alt=""></div>
 </body>
 </html>
